--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_11.toString()
+        targetCompatibility JavaVersion.VERSION_11.toString()
     }
     kotlinOptions {
         jvmTarget = '11'
